<resources>
    <string name="cut">图片剪裁</string>
    <string name="choice">图片选择</string>
    <string name="weekday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="sex_other">保密</string>
    <string name="save">保存</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="compile">编辑</string>
    <string name="send">发送</string>
    <string name="selected">选择</string>
    <string name="insert">添加</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="select">查询</string>
    <string name="camera">拍照</string>
    <string name="camera_reset">重新拍照</string>
    <string name="photo">相册</string>
    <string name="msg_camera">拍照失败</string>
    <string name="msg_permission">请赋予存储卡权限</string>
    <string name="msg_picture_max">您最多只能选择9张图片</string>
    <string name="msg_upload_failure">图片上传失败</string>
    <string name="msg_upload_success">图片上传成功</string>
    <string name="msg_submit_success">提交成功</string>
    <string name="msg_audit">资料审核中,请稍后查看</string>
    <string name="msg_not_find">未找到</string>
    <string name="msg_intent_login">跳转登录界面失败</string>
    <string name="end_time" formatted="false">该预约将于%s失效，请尽快接受预约或拒绝预约。接受预约后，需上门提供量房报价。</string>
    <string name="order_cancel">你已申请取消预约，请等待平台审核结果。</string>
    <string name="order_offer_start" formatted="false">预约已接受，请联系业主预约上门量房报价。请在%s之前完成首次报价，否则将扣除保证金。</string>
    <string name="order_offer_over">报价已完成，请等待客户接受报价。</string>
    <string name="order_project_start" formatted="false">业主已接受合同并付款。业主指定开工日期为：%s请立即开始组队。</string>
    <string name="order_invalid">预约已失效，请点击删除。</string>
    <string name="submit_time" formatted="false">提交时间：%s</string>
    <string name="order_number" formatted="false">预约单号：%s</string>
    <string name="order_status_1">新预约</string>
    <string name="order_status_2">已取消</string>
    <string name="order_status_3">待报价</string>
    <string name="order_status_4">已报价</string>
    <string name="order_status_5">待开工</string>
    <string name="order_status_6">已失效</string>
    <string name="house_hall">厅</string>
    <string name="house_room">室</string>
    <string name="house_kitchen">厨</string>
    <string name="house_toilet">卫</string>
    <string name="house_balcony">阳台</string>
    <string name="house_other">其他</string>
    <string name="data_status_1">请认证</string>
    <string name="data_status_2">认证未通过</string>
    <string name="data_status_3">已认证</string>
    <string name="data_status_5">认证中</string>
    <string name="company_status_0">未关联</string>
    <string name="next">下一步</string>
    <string name="audit">提交审核</string>
</resources>