<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_min"
        android:background="@color/color_primary">

        <RelativeLayout
            android:id="@+id/date_cancel_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_max"
            android:paddingRight="@dimen/padding_max"
            android:background="@drawable/btn_click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/date_sure_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/padding_max"
            android:paddingRight="@dimen/padding_max"
            android:background="@drawable/btn_click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title" />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/picker_height"
        android:orientation="horizontal"
        android:padding="@dimen/padding_max"
        android:background="@color/white">

        <com.seven.library.view.widget.PickerView
            android:id="@+id/year_picker_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/year_picker_tv"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year" />

        <com.seven.library.view.widget.PickerView
            android:id="@+id/month_picker_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/month_picker_tv"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:visibility="gone"/>

        <com.seven.library.view.widget.PickerView
            android:id="@+id/day_picker_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/day_picker_tv"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:visibility="gone"/>

        <com.seven.library.view.widget.PickerView
            android:id="@+id/hour_picker_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/hour_picker_tv"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:visibility="gone"/>

        <com.seven.library.view.widget.PickerView
            android:id="@+id/minute_picker_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/minute_picker_tv"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>