<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/sex_man_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sex_man" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/sex_woman_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sex_woman" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/sex_cancel_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>