<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/avatar_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="btClick">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/avatar_camera_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click"
            android:onClick="btClick">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/camera" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/avatar_photo_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click"
            android:onClick="btClick">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/photo" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <RelativeLayout
            android:id="@+id/avatar_cancel_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:background="@drawable/btn_white_click"
            android:onClick="btClick">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>